deploy/lets-encrypt.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lets-encrypt
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: openshift-acme
  namespace: lets-encrypt
  labels:
    app: openshift-acme
  annotations:
    image.alpha.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"openshift-acme:latest"},"fieldPath":"spec.template.spec.containers[0].image"}]'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"openshift-acme:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"openshift-acme\")].image"}]'
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openshift-acme
    spec:
      serviceAccountName: openshift-acme
      containers:
      - name: openshift-acme
        image: " "
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
