deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  namespace: knative-scout
  labels:
    app: app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
    spec:
      containers:
        - name: app-api
          image: docker.io/kscout/app-api:dev-2
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: app-api
  namespace: knative-scout
  labels:
    app: app-api
spec:
  type: ClusterIP
  selector:
    app: app-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-api
  namespace: knative-scout
  labels:
    app: app-api    
spec:
  host: api.kscout.io
  path: /
  to:
    kind: Service
    name: app-api
    weight: 100
  port:
    targetPort: http
status:
  ingress:
    - host: api.kscout.io
